[package]
name = "linfb"
version = "0.1.0"
authors = ["Maximilian Siling <mouse-art@ya.ru>"]
edition = "2018"

description = "Library for interaction with Linux framebuffer"
keywords = ["Linux", "framebuffer"]
license = "MIT"
homepage = "https://github.com/GoldsteinE/linfb"

[dependencies]
nix = "~0.15.0"
memmap = "~0.7.0"
